@@ -48,6 +48,7 @@ extern "C" {
   extern unsigned char *byteCode;
   extern unsigned int byteOffset;
   extern unsigned int maxbyteoffset;
+  extern char *symtable[];
 }
 
 
@@ -1925,6 +1926,7 @@ Interpreter::execByteCode()
 	op += sizeof(int);
 	stackval *temp = stack.pop();
 
+
 	if (vars[*num].type == T_ARRAY)
 	  {
 	    delete(vars[*num].value.arr->data.fdata);
@@ -1947,6 +1949,10 @@ Interpreter::execByteCode()
 	    vars[*num].value.floatval = temp->value.floatval;
 	  } 
 	delete temp;
+	if(debugMode)
+	  {
+	    emit(varAssignment(QString(symtable[*num]), QString::number(vars[*num].value.floatval)));
+	  }
       }
       break;
 
@@ -1968,6 +1974,10 @@ Interpreter::execByteCode()
 	    return -1;
 	  }
 	delete temp;
+	if(debugMode)
+	  {
+	    emit(varAssignment(QString(symtable[*num]), QString(vars[*num].value.string)));
+	  }
       }
       break;
 
