@@ -1,14 +1,0 @@
-rem Array example
-
-dim myarray(10)
-myarray[0] = 42
-myarray[3] = 42
-myarray[5] = 42
-
-for i = 0 to 9
-print "Myarray at index ";
-print i;
-print " = ";
-print myarray[i]
-next i
-
